<resources>

    <!-- Shared preferences -->
    <string name="prefNotificationsEnabled">notifEnabled</string>
    <string name="prefQuizTimeout">quizTimeout</string>
    <string name="prefDownloadDate">downloadDate</string>

    <!-- Main -->
    <string name="app_name">InfoGoT</string>
    <string name="description">Tiny info app about the Game of Thrones world</string>
    <string name="credits">Abel Herrero Gómez\nSergio Alonso Pascual</string>
    <string name="books">Books</string>
    <string name="characters">Characters</string>
    <string name="houses">Houses</string>
    <string name="downloadError">Download failed. Check your Internet connection</string>
    <string name="downloadMessage">Downloading data...</string>

    <!-- Lists -->
    <string name="bookList">List of books</string>
    <string name="charactersList">List of characters</string>
    <string name="housesList">List of houses</string>
    <string name="search">Search:</string>

    <!-- Book details -->
    <string name="idBook">idBook</string>
    <string name="cover">Cover</string>
    <string name="releaseDate">Release date</string>
    <string name="authors">Authors</string>
    <string name="pages">Pages</string>
    <string name="listOfCharacters">List of characters</string>

    <!-- Character details -->
    <string name="idCharacter">idCharacter</string>
    <string name="gender">Gender</string>
    <string name="culture">Culture</string>
    <string name="born">Born</string>
    <string name="died">Died</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="spouse">Spouse</string>
    <string name="played_by">Played by</string>
    <string name="aliases">Aliases</string>
    <string name="allegiances">Allegiances</string>
    <string name="tv_series">TV Series</string>

    <!-- House details -->
    <string name="idHouse">idHouse</string>
    <string name="coat_of_arms">Coat of arms</string>
    <string name="words">Words</string>
    <string name="region">Region</string>
    <string name="current_lord">Current lord</string>
    <string name="overlord">Overlord</string>
    <string name="heir">Heir</string>
    <string name="founded">Founded</string>
    <string name="founder">Founder</string>
    <string name="died_out">Died out</string>
    <string name="titles">Titles</string>
    <string name="seats">Seats</string>
    <string name="ancestral_weapons">Ancestral weapons</string>
    <string name="cadet_branches">Cadet branches</string>
    <string name="sworn_members">Sworn members</string>

    <!-- Notifications -->
    <string name="notifications">Notifications</string>
    <string name="quiz_notifications">Quiz notifications</string>
    <string name="ask_me_every">Ask me every</string>
    <string name="save">Save</string>

</resources>
