<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_settings"
        android:adjustViewBounds="true" />

    <TextView android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/appTitle"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/description"
        android:textSize="20sp"/>

    <Button android:id="@+id/btnBooks"
        android:layout_width="@dimen/widthButtonMain"
        android:layout_height="@dimen/heightButtonMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/description"
        android:text="@string/books"
        android:textSize="@dimen/textSizeButtonMain"
        android:textColor="@android:color/white"
        android:background="@drawable/button_round_corners" />

    <Button android:id="@+id/btnCharacters"
        android:layout_width="@dimen/widthButtonMain"
        android:layout_height="@dimen/heightButtonMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/interspaceButtonsMain"
        android:layout_below="@id/btnBooks"
        android:text="@string/characters"
        android:textSize="@dimen/textSizeButtonMain"
        android:textColor="@android:color/white"
        android:background="@drawable/button_round_corners" />

    <Button android:id="@+id/btnHouses"
        android:layout_width="@dimen/widthButtonMain"
        android:layout_height="@dimen/heightButtonMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/interspaceButtonsMain"
        android:layout_below="@id/btnCharacters"
        android:text="@string/houses"
        android:textSize="@dimen/textSizeButtonMain"
        android:textColor="@android:color/white"
        android:background="@drawable/button_round_corners" />




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/credits"
        android:textSize="16sp" />

</RelativeLayout>