<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/dialog_round_corners"
    android:padding="30dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/notifications"
        android:textSize="26sp"
        android:textColor="@android:color/black" />


    <Switch
        android:id="@+id/switchQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/quiz_notifications"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/ask_me_every"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/quizTimeout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:text="3s"
            android:textSize="18sp"
            android:textColor="@android:color/black" />

        <SeekBar
            android:id="@+id/seekBarQuizTimeout"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.6" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_round_corners"
        android:text="@string/save"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

</LinearLayout>